--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@ body{
     top: 120px; 
     background: #FFFFFF;
     border-radius: 12px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0%;
 }
 
 /* image-product-desktop */
